--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
             <div class="text-center md:text-left">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
-                    <span class="gradient-text">Professional</span> Web Developer
+                    <span class="gradient-text">MAXIMUS ASOGWA</span> 
                 </h1>
+                <h3 class="text-2xl font-bold  mb-6">Web Developer | Founder of MaxWebCompany</h3>
                 <p class="text-lg md:text-xl text-gray-600 mb-8">
                     I create stunning, high-performance websites that drive results. 
                     9+ projects completed with a focus on responsive design, clean code, and user experience all in a short time.
@@ -653,7 +654,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400 mb-4 md:mb-0">© 2024 Beamax Graduate. All rights reserved.</p>
+                <p class="text-gray-400 mb-4 md:mb-0">© 2025 MaxWebCompany — Built by Maximus Asogwa.</p>
                 <div class="flex space-x-6">
                     <a href="https://github.com/kingleo98967" class="text-gray-400 hover:text-white transition">
                         <i class="fab fa-github"></i>
@@ -800,4 +801,5 @@
   });
     </script>
 </body>
+
 </html>
