--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                          alt="Corporate Website" 
                          class="w-full h-full object-cover transition duration-500 hover:scale-110">
                     <div class="absolute inset-0 bg-primary/50 flex items-center justify-center opacity-0 hover:opacity-100 transition">
-                        <a href="https://kings-estate.infinityfreeapp.com" class="bg-white text-primary font-bold py-2 px-4 rounded-full hover:bg-primary hover:text-white transition">
+                        <a href="http://kings-estate.infinityfreeapp.com/" class="bg-white text-primary font-bold py-2 px-4 rounded-full hover:bg-primary hover:text-white transition">
                             Visit Site
                         </a>
                     </div>
@@ -803,4 +803,5 @@
 </body>
 
 </html>
+
 
